--- a/.github/workflows/123.yml
+++ b/.github/workflows/123.yml
@@ -45,9 +45,7 @@ jobs:
       - name: Install dependencies
         run: npm ci # or pnpm install / yarn install / bun install
       - name: Build with VitePress
-        run: |
-          npm run build
-          touch /.vitepress/dist/.nojekyll
+        run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
