--- a/.github/workflows/123.yml
+++ b/.github/workflows/123.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: /.vitepress/dist
+          path: ./.vitepress/dist/
 
   # Deployment job
   deploy:
